package com.example.pcb.dto;

public class FailureCountDto {
    public String name;
    public int count;

    public FailureCountDto(String name, int count) {
        this.name = name;
        this.count = count;
    }
}
