package com.example.pcb.dto;

public class RunRequestDto {
    public String boardType;
    public int count;
}