package com.example.pcb.engine.station;

import com.example.pcb.engine.outcome.Outcome;
import com.example.pcb.engine.outcome.Success;
import com.example.pcb.engine.outcome.StationFailure;
import com.example.pcb.engine.outcome.PCBDefectFailure;

import com.example.pcb.service.FailureRateService;

public class HandSolderAssembly extends AssemblyStation implements PCBCheckStation {

    private final FailureRateService failureRateService;

    public HandSolderAssembly(FailureRateService failureRateService) {
        this.failureRateService = failureRateService;
    }

    @Override
    public Outcome performAssembleStep() {
        double rate = failureRateService.getFailureRate(
            currentPCB.getName(),
            this.getName()
        );

        if (!checkForStationFailure()) {
            if (!checkForPCBDefects(rate)) {
                return new Success(this, currentPCB);
            }
            return new PCBDefectFailure(this, currentPCB);
        }
        return new StationFailure(this, currentPCB);
    }

    @Override    
    public String getName() {
        return "HandSolderAssembly";
    }
}
