-- Drop tables first (optional, for fresh start)
DROP TABLE IF EXISTS failure_rate CASCADE;
DROP TABLE IF EXISTS pcb_type CASCADE;
DROP TABLE IF EXISTS simulation_run CASCADE;

-- Create pcb_type table
CREATE TABLE IF NOT EXISTS pcb_type (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255)
);

-- Create failure_rate table
CREATE TABLE IF NOT EXISTS failure_rate (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    failure_rate DOUBLE PRECISION NOT NULL,
    pcb_type_id BIGINT,
    station_name VARCHAR(255),
    CONSTRAINT fk_pcb_type FOREIGN KEY (pcb_type_id) REFERENCES pcb_type(id)
);

-- Create simulation_run table
CREATE TABLE IF NOT EXISTS simulation_run (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    result_json TEXT
);
